# WEB_HW_6

./: README.md  all_queries_postgress.sql  create_db.py  create_tables.sql  postgress_connector.py  pyproject.toml  query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  query_manager.py  seeds.py
