[tool.poetry]
name = "web-hw-6"
version = "0.1.0"
description = ""
authors = ["Viacheslav Artemenko <v.a.artemenko1990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
faker = "^19.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
